reorganization to get python notebooks output rendered correctly in quarto

--- a/preliminaries/PRE101/index.qmd
+++ b/preliminaries/PRE101/index.qmd
@@ -16,4 +16,5 @@ See [CLASSE Wiki][classe-wiki-jupyterhub] for details.
 
 :::
 
+{{< embed PRE101-Introduction.ipynb >}}
 {{< embed PRE101.ipynb >}}
